feature - Android: implement voice to text viewModel with an Android recognition listener

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="error_server">An error happened. Please try again later.</string>
     <string name="error_unknown">Oops, an unknown error happened.</string>
     <string name="record_audio">Record audio</string>
+
+    <string name="error_speech_recognition_unavavailable">Speech recognition is not available</string>
 </resources>
